--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -6,6 +6,7 @@
 /* font-family: "Montserrat", sans-serif; */
 html {
     font-size: 62.5;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -23,8 +24,12 @@ h1 {
     text-transform: uppercase;
 }
 h2 {
-    font-size: 5.5rem;
-}h3{
+    font-size: 6rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
+}
+h3{
     font-size: 5rem;
 }h4 {
     font-size: 4.5rem;
@@ -35,4 +40,7 @@ h2 {
 }
 a {
     text-decoration: none;
+}
+p {
+    margin-bottom: 3rem;
 }
